Revert "error while building in openshift:"
This reverts commit 003fa582c69706e68a9a6b28c1ca3333aee48e00.

--- a/src/main/docker/Dockerfile.jvm.staged
+++ b/src/main/docker/Dockerfile.jvm.staged
@@ -19,7 +19,7 @@
 ###
 FROM registry.access.redhat.com/ubi8/openjdk-11:latest
 
-# USER root
+USER root
 WORKDIR /build
 RUN mkdir -p .mvn/wrapper
 # Build dependency offline to streamline build
